test/e2e/testdata/weighted-backend-completing-rollout.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weight-complete-rollout-http-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /complete-rollout
      backendRefs:
        - name: infra-backend-v1
          port: 8080
          weight: 10
        - name: infra-backend-v2
          port: 8080
          weight: 0
